name:                housetab
version:             0.1.0.0
synopsis:
description:         Please see README.md
homepage:            https://github.com/dbp/housetab-prime
license:             ISC
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2016 Daniel Patterson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable housetab
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fn
                     , larceny
                     , postgresql-simple
                     , warp
                     , logging
                     , directory
                     , wai
                     , text
                     , dotenv
                     , resource-pool
                     , heroku
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/housetab-prime
