name:                housetab
version:             0.1.0.0
synopsis:
description:         Please see README.md
homepage:            https://github.com/dbp/housetab-prime
license:             ISC
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2016 Daniel Patterson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable housetab
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Site
                       Context
                       Handler.Auth
                       Handler.Home
                       State.Account
                       State.Auth
                       State.Types.Account
                       State.Types.Authentication
                       State.Types.Email
                       Base
                       State.Cache
                       State.Entry
                       State.Person
                       State.Types.Entry
                       State.Types.Person
                       Handler.Entry
                       Lib
                       State.Share
                       State.Types.Share
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fn
                     , larceny
                     , postgresql-simple
                     , warp
                     , logging
                     , directory
                     , wai
                     , text
                     , dotenv
                     , resource-pool
                     , heroku
                     , http-types
                     , time
                     , vault
                     , clientsession
                     , wai-session
                     , wai-session-clientsession
                     , data-default
                     , cereal-text
                     , cookie
                     , mtl
                     , containers
                     , bytestring
                     , lucid
                     , digestive-functors
                     , resourcet
                     , wai-extra
                     , cassava
                     , vector
                     , amazonka
                     , amazonka-ses
                     , lens
                     , rivet-core
                     , rivet-adaptor-postgresql
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/housetab
